--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Elin 💖</title>
+  <title>Elin</title>
   <style>
     body {
       font-family: 'Comic Sans MS', cursive, sans-serif;
@@ -11,7 +11,6 @@
       padding: 30px;
       background: linear-gradient(135deg, #ff9a9e 0%, #fad0c4 100%);
       color: #fff;
-      overflow-x: hidden;
     }
 
     h1 {
@@ -22,13 +21,9 @@
       opacity: 0;
     }
 
-    @keyframes fadeIn {
-      to { opacity: 1; }
-    }
+    @keyframes fadeIn { to { opacity: 1; } }
 
-    .buttons {
-      margin-top: 20px;
-    }
+    .buttons { margin-top: 20px; }
 
     button {
       font-size: 1.5rem;
@@ -40,30 +35,18 @@
       transition: transform 0.2s;
     }
 
-    button:hover {
-      transform: scale(1.1);
-    }
+    button:hover { transform: scale(1.1); }
 
-    .yes {
-      background-color: #ff4081;
-      color: #fff;
-    }
-
-    .no {
-      background-color: #333;
-      color: #fff;
-      font-size: 0.7rem;
-      padding: 3px 6px;
-      opacity: 0.5;
-    }
+    .yes { background-color: #ff4081; color: #fff; }
+    .no { background-color: #333; color: #fff; font-size: 0.7rem; padding: 3px 6px; opacity: 0.5; }
   </style>
 </head>
 <body>
-  <h1>Elin, will you be my girlfriend? 💖</h1>
+  <h1>Elin, will you be my girlfriend?</h1>
 
   <div class="buttons">
-    <button class="yes" onclick="alert('Yay! 💖 I’m so happy!')">Yes 💖</button>
-    <button class="no" onclick="alert('Oh no 😢 Maybe another time!')">No 😢</button>
+    <button class="yes" onclick="alert('Yes clicked!')">Yes</button>
+    <button class="no" onclick="alert('No clicked!')">No</button>
   </div>
 </body>
 </html>
